bk_ida/gccida/c1/insert_set_in_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_set_in_table/src/gcse.c:2558:52: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
if ( *( _WORD *)x != 47 || ( v2.rtwint = ( __int64)x->fld[0], *( _WORD *)v2.rtwint != 61) ) 
                                                   ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_set_in_table/src/gcse.c:2598:14: error: expected expression
*( ( _OWORD *)v4 + 1) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_set_in_table/src/gcse.c:2598:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v4 + 1) = 0LL; 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_set_in_table/src/obj/gcse.o] Error 1
